<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BrockButler</string>

    <!-- AddTaskActivity -->
    <string name="activity_add_task">Add Task</string>
    <string name="activity_add_task_task_title">Title</string>
    <string name="activity_add_task_hint_task_title">Task title</string>
    <string name="activity_add_task_course">Course</string>
    <string name="activity_add_task_priority">Priority</string>
    <string name="activity_add_task_weight">Weight</string>
    <string name="activity_add_task_hint_weight">0 for no mark</string>
    <string name="activity_add_task_description">Description</string>
    <string name="activity_add_task_hint_description">Add description</string>
    <string name="activity_add_task_base">Base</string>
    <string name="activity_add_task_hint_base">Enter base mark</string>
    <string name="activity_add_task_mark">Mark</string>
    <string name="activity_add_task_hint_mark">Awarded mark</string>
    <string name="activity_add_task_due_date">Edit Due Date</string>
    <string name="activity_add_task_contact">Add Contact</string>
    <string name="activity_add_task_date">No due date set</string>
    <string name="activity_add_task_contacts">No contacts set</string>

    <!-- CourseManagerActivity -->
    <string name="activity_coursemanager">Course Manager</string>
    <string name="add_course_remove">Remove Course</string>
    <string name="add_course_update_master_list">Update Master List</string>
    <string name="loading_courses_registrar">Updating Course Database</string>
    <string name="no_courses">No registered courses.\n\nMenu>Add Course</string>
    <string-array name="course_manager_context_menu">
        <item>Modify</item>
        <item>Remove</item>
    </string-array>
    <string name="loading_courses_registrar_msg">The course database is updating from the Brock Registrar.\n\nThis may take a few moments.</string>
    <string name="menu_show_coursemanager_help">Show Help</string>
    <string name="course_grade">Course Grade</string>

    <!-- AddContactActivity -->
    <string name="activity_add_contact">Add Contact</string>
    <string name="activity_add_contact_fname">First Name</string>
    <string name="activity_add_contact_hint_fname">Enter first name</string>
    <string name="activity_add_contact_lname">Last Name</string>
    <string name="activity_add_contact_hint_lname">Enter last name</string>
    <string name="activity_add_contact_email">Email</string>
    <string name="activity_add_contact_hint_email">Enter email address</string>
    <string name="activity_add_contact_courses">Courses</string>
    <string name="activity_add_contact_add_courses">Add Course</string>
    <string name="activity_add_contact_remove">Remove</string>

    <!-- AddCourseActivity -->
    <string name="title_add_course">Add Course</string>
    <string name="add_course_subject">Subject</string>
    <string name="add_course_add">Add Course</string>
    <string name="add_course_code">Code</string>
    <string name="add_course_add_lecs">Lectures</string>
    <string name="add_course_add_labs">Labs</string>
    <string name="add_course_add_sems">Seminars</string>
    <string name="add_course_add_tuts">Tutorials</string>

    <!-- Professors -->
    <string name="prof_name">Professor Name</string>
    <string name="prof_office">Office</string>
    <string name="prof_email">Email</string>

    <!-- SchedulerActivity -->
    <string name="menu_add_task">Add Task</string>
    <string name="menu_remove_task">Remove Task</string>
    <string name="menu_modify_task">Modify Task</string>
    <string name="menu_expand_collapse">Expand/Collapse All</string>
    <string name="sched_no_courses">No registered courses.\n\nGo to Course Manager to add courses.</string>
     <string name="menu_show_scheduler_help">Show Help</string>
    <string name="scheduler_menu_showhide_completed">Show//Hide Completed Tasks</string>

    <!-- row_task_* -->
    <string name="title_tasks">Tasks</string>
    <string name="title_lecture">Lectures</string>
    <string name="title_lab">Labs</string>
    <string name="title_tutorial">Tutorials</string>
    <string name="title_seminar">Seminar</string>
    <string name="title_assignment">Assignments</string>
    <string name="title_test">Tests</string>

    <!-- MapsActivity -->
    <string name="menu_search">Search for Location</string>
    <string name="menu_get_directions">Get Directions</string>
    <string name="menu_update_position">Update Position</string>
    <string name="menu_exit_maps">Exit Maps</string>
    <string name="menu_show_maps_help">Show Help</string>

    <!-- TourActivity -->
    <string name="menu_go_back">Go Back</string>
    <string name="menu_turn_around">Turn Around</string>
    <string name="menu_teleport">Teleport!</string>
    <string name="menu_end_tour">End Tour</string>
    <string name="a_block">A Block</string>
    <string name="b_block">B Block</string>
    <string name="c_block">C Block</string>
    <string name="d_block">D Block</string>
    <string name="e_block">E Block</string>
    <string name="f_block">F Block</string>
    <string name="g_block">G Block</string>
    <string name="h_block">H Block</string>
    <string name="j_block">J Block</string>
    <string name="go_left">Go Left</string>
    <string name="go_forward">Go Forward</string>
    <string name="go_right">Go Right</string>
    <string name="menu_settings">Settings</string>

    <!-- LoginActivity -->
    <string name="title_activity_login">Login Activity</string>
    <string name="login_email">Login</string>
    <string name="login_password">Password</string>
    <string name="login_skip">Skip</string>
    <string name="login_remember">Remember me</string>
    <string name="login_skip_msg">Always skip login</string>
    <string name="login">Login</string>
    <string name="temp">Logo Here</string>
    <string name="msg_skip">By logging in BrockButler attempts to automatically update your timetable, grades, and other information from my.brocku.\n\nDo you still want to skip the login process?</string>

    <!-- MainActivity -->
    <string name="title_activity_main">Brock Butler</string>
    <string name="title_activity_map">Brock Maps</string>
    <string name="test_image">This is a test image.</string>
    <string name="title_scheduler">Scheduler</string>
    <string name="title_maps">Maps</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_tour">Tour</string>
    <string name="title_help">User Manual</string>
    <string name="title_activity_help">User Manual</string>
    <string name="title_activity_scheduler">Scheduler</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_tour">Brock Butler Tour</string>
    <string name="title_activity_add_task">Add Task</string>
    <string name="title_modify_task">Modify Task</string>
    <string name="title_modify_course">Modify Course</string>
    <string name="task_priority_prompt">Task Priority</string>

    <!-- Miscellaneous -->
    <string name="contentdesc">Content Description</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>

    <string-array name="task_priority_array">
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>
    
    <string-array name="empty">
        <item>None</item>
    </string-array>

    <string name="none">None</string>

</resources>