<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:onClick="displaySearchDialog"
        android:titleCondensed="@string/menu_search">
    </item>
    <item
        android:id="@+id/menu_get_directions"
        android:title="@string/menu_get_directions"
        android:onClick="displayGetDirectionsDialog"
        android:titleCondensed="@string/menu_get_directions">
    </item>
    <item
        android:id="@+id/menu_update_position"
        android:title="@string/menu_update_position"
        android:onClick="updatePosition"
        android:titleCondensed="@string/menu_update_position">
    </item>
    <item
        android:id="@+id/menu_exit_maps"
        android:title="@string/menu_exit_maps"
        android:onClick="exitMaps"
        android:titleCondensed="@string/menu_exit_maps">
    </item>

</menu>