<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    android:orientation="vertical"
    tools:context=".AddTaskActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="85sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/activity_add_task_course" />

            <Spinner
                android:id="@+id/add_task_course_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="25sp"
                android:prompt="@string/task_priority_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="85sp"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_task_task_title" />

            <EditText
                android:id="@+id/add_task_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:hint="@string/activity_add_task_hint_task_title"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="85sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/activity_add_task_priority" />

            <Spinner
                android:id="@+id/add_task_priority_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="25sp"
                android:entries="@array/task_priority_array"
                android:prompt="@string/task_priority_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="85sp"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_task_weight" />

            <EditText
                android:id="@+id/task_weight"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:hint="@string/activity_add_task_hint_weight"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="85sp"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_task_base" />

            <EditText
                android:id="@+id/task_base"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:hint="@string/activity_add_task_hint_base"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="85sp"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_task_mark" />

            <EditText
                android:id="@+id/task_mark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:hint="@string/activity_add_task_hint_mark"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/add_task_due_date_button"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_add_task_due_date" />

            <TextView
                android:id="@+id/add_task_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/activity_add_task_date"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/add_task_save_button"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/button_save" />

            <Button
                android:id="@+id/add_task_cancel_button"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:text="@string/button_cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
