<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add_task"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:onClick="addTask"
        android:title="@string/menu_add_task"/>
    <item
        android:id="@+id/menu_expand_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_collapse_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_show_scheduler_help"
         android:orderInCategory="100"
         android:showAsAction="never"
        android:onClick="showHelp"
        android:title="@string/menu_show_scheduler_help"/>
       

</menu>