<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    android:orientation="vertical"
    tools:context=".AddTaskActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="85sp"
            android:layout_height="wrap_content"
            android:text="@string/activity_add_contact_fname" />

        <EditText
            android:id="@+id/et_contact_fname"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:hint="@string/activity_add_contact_hint_fname"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="85sp"
            android:layout_height="wrap_content"
            android:text="@string/activity_add_contact_lname" />

        <EditText
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:hint="@string/activity_add_contact_hint_lname"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/add_contact_add_course_button"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/activity_add_contact_courses" />

        <ListView
            android:id="@+id/add_contact_course_listview"
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:layout_marginTop="10sp"
            android:text="@string/activity_add_task_contacts"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add_task_save_button"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/activity_add_task_save" />

        <Button
            android:id="@+id/add_task_cancel_button"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="@string/activity_add_task_cancel" />
    </LinearLayout>

</LinearLayout>