<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/main_icon_row1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75sp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgv_sched"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_margin="40sp"
            android:contentDescription="@string/test_image"
            android:src="@drawable/earth_orbit_elliptic" />

        <ImageView
            android:id="@+id/imgv_contacts"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_margin="40sp"
            android:contentDescription="@string/test_image"
            android:src="@drawable/earth_orbit_elliptic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_title_row1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/main_icon_row1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55sp"
            android:text="@string/title_scheduler"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="175sp"
            android:text="@string/title_contacts"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>